2022-11-23T01:35:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3528504254 # 253
* notice: last 14d: unq all: 1 16
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 97 257
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 97 258
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-22]

2022-11-22T08:27:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3521618271 # 251
* notice: last 14d: unq all: 1 15
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 96 256
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 97 257
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-22]

2022-11-21T16:27:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3516227280 # 249
* notice: last 14d: unq all: 1 14
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 95 255
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 96 256
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-21]

2022-11-21T01:46:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3510767034 # 247
* notice: last 14d: unq all: 1 13
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 95 254
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 95 255
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-20]

2022-11-20T08:22:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3507153428 # 245