@@ -1,5 +1,5 @@
 {
-  "count": 16,
+  "count": 17,
   "uniques": 1,
   "clones": [
     {
@@ -50,6 +50,11 @@
     {
       "timestamp": "2022-11-22T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-23T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
